--- a/index.html
+++ b/index.html
@@ -4,25 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="I'm a senior front-end developer, with a proven track record in delivering high-quality, maintainable code. I'm always interested in finding a new challenge, and I'm always happy to help others learn their new skills!">
+    <meta property="og:title" content="chris.tsx" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://christophermarques.github.io/social-links/" />
+    <meta property="og:image" content="/images/screen.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="images/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="images/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="images/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="images/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="images/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="images/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="images/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
-    <title>chris.jsx</title>
+    <title>chris.tsx</title>
 </head>
 <body>
     <div class="container">
         <div class="header">
             <div class="img-container"><img src="https://avatars.githubusercontent.com/u/40878232?s=400&u=386c5bdc0d1155e42c840d8caee4d48c046ed484&v=4" alt="black man looking to the horizon."/></div>
-            <h1>@chris.jsx</h1>
+            <h1><a href="https://www.instagram.com/chris.tsx/" target="_blank">@chris.tsx</a></h1>
             <h2>Senior JavaScript Developer</h2>
         </div>
         <ul class="social-links">
-            <li><a href="#" target="_blank">github</a></li>
+            <li><a href="https://github.com/ChristopherMarques" target="_blank">github</a></li>
             <li><a href="#" target="_blank">website</a></li>
-            <li><a href="#" target="_blank">linkedin</a></li>
+            <li><a href="https://www.linkedin.com/in/christopher-marques-correa/" target="_blank">linkedin</a></li>
         </ul>
         <footer>all rights reserved &copy; | made with &#10084;&#65039; in Brazil - São Paulo</footer>
     </div>
