--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta property="og:title" content="chris.tsx" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://christophermarques.github.io/social-links/" />
-    <meta property="og:image" content="https://christophermarques.github.io/social-links/images/screen.png" />
+    <meta property="og:image" itemprop="image" content="https://christophermarques.github.io/social-links/images/screen.png" />
+    <meta property="og:updated_time" content="1440432930" />
     <link rel="apple-touch-icon" sizes="57x57" href="images/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="images/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-icon-72x72.png">
