--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <meta property="og:url" content="https://christophermarques.github.io/social-links/" />
     <meta property="og:image" itemprop="image" content="https://christophermarques.github.io/social-links/images/screen.png" />
     <meta property="og:updated_time" content="1440432930" />
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="211">
+    <meta property="og:image:height" content="268">
     <link rel="apple-touch-icon" sizes="57x57" href="images/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="images/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-icon-72x72.png">
