--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
       minHeight: 200.00,
       minWidth: 200.00,
       scale: 1.00,
-      scaleMobile: 1.00
+      scaleMobile: 1.00,
+      spacing: 3.00,
+      chaos: 4.50
     })
     </script>
 </body>
